--- a/landing.html
+++ b/landing.html
@@ -3,35 +3,35 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>At the Mirage</title>
+    <title>at the mirage</title>
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
     <div class="landing-page">
         <div class="slideshow-container">
             <div class="slide">
-                <img src="images/jaghs.JPG" alt="Image 1">
+                <img src="images/b&w/jaghsbw.jpg" alt="Image 1">
             </div>
             <div class="slide">
-                <img src="images/scarybench.JPG" alt="Image 2">
+                <img src="images/b&w/scarybenchbw.jpg" alt="Image 2">
             </div>
             <div class="slide">
-                <img src="images/downtown.JPG" alt="Image 3">
+                <img src="images/b&w/downtownbw.jpg" alt="Image 3">
             </div>
             <div class="slide">
                 <img src="images/jaghsblurry.JPG" alt="Image 4">
             </div>
             <div class="slide">
-                <img src="images/somewhereinparis.JPG" alt="Image 5">
+                <img src="images/b&w/somewhereinparisbw.jpg" alt="Image 5">
             </div>
             <div class="slide">
-                <img src="images/lightbulb.JPG" alt="Image 6">
+                <img src="images/b&w/lightbulbbw.jpg" alt="Image 6">
             </div>
             <div class="slide">
                 <img src="images/jaghs2.JPG" alt="Image 7">
             </div>
             <div class="slide">
-                <img src="images/cemetary.JPG" alt="Image 8">
+                <img src="images/b&w/cemetarybw.jpg" alt="Image 8">
             </div>
             <!-- Add more slides as needed -->
         </div>
