--- a/landing.html
+++ b/landing.html
@@ -10,28 +10,28 @@
     <div class="landing-page">
         <div class="slideshow-container">
             <div class="slide">
-                <img src="images/b&w/jaghsbw.jpg" alt="Image 1">
+                <img src="images/blackandwhite/jaghsbw.jpg" alt="Image 1">
             </div>
             <div class="slide">
-                <img src="images/b&w/scarybenchbw.jpg" alt="Image 2">
+                <img src="images/blackandwhite/scarybenchbw.jpg" alt="Image 2">
             </div>
             <div class="slide">
-                <img src="images/b&w/downtownbw.jpg" alt="Image 3">
+                <img src="images/blackandwhite/downtownbw.jpg" alt="Image 3">
             </div>
             <div class="slide">
                 <img src="images/jaghsblurry.JPG" alt="Image 4">
             </div>
             <div class="slide">
-                <img src="images/b&w/somewhereinparisbw.jpg" alt="Image 5">
+                <img src="images/blackandwhite/somewhereinparisbw.jpg" alt="Image 5">
             </div>
             <div class="slide">
-                <img src="images/b&w/lightbulbbw.jpg" alt="Image 6">
+                <img src="images/blackandwhite/lightbulbbw.jpg" alt="Image 6">
             </div>
             <div class="slide">
                 <img src="images/jaghs2.JPG" alt="Image 7">
             </div>
             <div class="slide">
-                <img src="images/b&w/cemetarybw.jpg" alt="Image 8">
+                <img src="images/blackandwhite/cemetarybw.jpg" alt="Image 8">
             </div>
             <!-- Add more slides as needed -->
         </div>
