--- a/landing.html
+++ b/landing.html
@@ -5,6 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>at the mirage</title>
     <link rel="stylesheet" href="css/styles.css">
+    <script>
+        document.addEventListener('DOMContentLoaded', (event) => {
+            document.addEventListener('contextmenu', (e) => {
+                e.preventDefault();
+            });
+        });
+    </script>
 </head>
 <body>
     <div class="landing-page">
@@ -22,16 +29,16 @@
                 <img src="images/jaghsblurry.JPG" alt="Image 4">
             </div>
             <div class="slide">
-                <img src="images/blackandwhite/somewhereinparisbw.jpg" alt="Image 5">
+                <img src="images/blackandwhite/japanbw.jpg" alt="Image 5">
             </div>
             <div class="slide">
-                <img src="images/blackandwhite/lightbulbbw.jpg" alt="Image 6">
+                <img src="images/blackandwhite/familymartbw.JPG" alt="Image 6">
             </div>
             <div class="slide">
                 <img src="images/jaghs2.JPG" alt="Image 7">
             </div>
             <div class="slide">
-                <img src="images/blackandwhite/cemetarybw.jpg" alt="Image 8">
+                <img src="images/blackandwhite/treebw.jpg" alt="Image 8">
             </div>
             <!-- Add more slides as needed -->
         </div>
