--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                 <img src="images/soundwave.png" alt="Speaker Icon" class="speaker-icon">
             </button>
         </div>
-        <a href="main.html" class="enter-button">Enter</a>
+        <a href="main.html" class="enter-button">...</a>
         <audio id="background-audio" src="audio/background-slowed.mp3" loop></audio>
     </div>
     <script src="js/slideshow.js"></script>
