aupdated favicon and images 📝

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>at the mirage</title>
     <meta name="description"
-			content="find me where i don't exist"/>
+			content="photography in the twilight zone..."/>
     <link rel="stylesheet" href="css/styles.css">
     <link rel="apple-touch-icon" sizes="180x180" href="images/favicon/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="images/favicon/favicon-32x32.png">
@@ -41,7 +41,7 @@
                 <img src="images/blackandwhite/japanbw.jpg" alt="Image 5">
             </div>
             <div class="slide">
-                <img src="images/blackandwhite/familymartbw.JPG" alt="Image 6">
+                <img src="images/blackandwhite/japanroad.jpg" alt="Image 6">
             </div>
             <div class="slide">
                 <img src="images/jaghs2.JPG" alt="Image 7">
