--- a/index.html
+++ b/index.html
@@ -49,6 +49,9 @@
             <div class="slide">
                 <img src="images/blackandwhite/treebw.jpg" alt="Image 8">
             </div>
+            <div class="slide">
+                <img src="images/blackandwhite/portugal1.jpg" alt="Image 9">
+            </div>
             <!-- Add more slides as needed -->
         </div>
         <div class="text-container">
