--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                 <img src="images/blackandwhite/treebw.jpg" alt="Image 8">
             </div>
             <div class="slide">
-                <img src="images/blackandwhite/portugal1.jpg" alt="Image 9">
+                <img src="images/blackandwhite/portugal1.JPG" alt="Image 9">
             </div>
             <!-- Add more slides as needed -->
         </div>
