updated audio path

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
             </button>
         </div>
         <a href="main.html" class="enter-button">...</a>
-        <audio id="background-audio" src="audio/background-slowed.mp3" loop></audio>
+        <audio id="background-audio" src="audio/background-guitar.mp3" loop></audio>
     </div>
     <script src="js/slideshow.js"></script>
     <script src="js/audio.js"></script>
